add blinder/colab support

--- a/jupyterbook/_config.yml
+++ b/jupyterbook/_config.yml
@@ -30,3 +30,8 @@ repository:
 html:
   use_issues_button: true
   use_repository_button: true
+
+# add colab for each jupyter-notebook
+launch_buttons:
+  colab_url: "https://colab.research.google.com"
+  binderhub_url: "https://mybinder.org"
