--- a/jupyterbook/_config.yml
+++ b/jupyterbook/_config.yml
@@ -2,7 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/config.html
 
 title: PHYS5340
-author: auther
+author: Prof. PO HC Adrian
 logo: logo.png
 
 # Force re-execution of notebooks on each build.
